--- a/public/exercises/exercises_1/comments.html
+++ b/public/exercises/exercises_1/comments.html
@@ -25,6 +25,10 @@
 
     <script type="text/babel">
       const { useState, useEffect } = React;
+      const isProduction =
+        window.location.hostname !== "localhost" &&
+        window.location.hostname !== "127.0.0.1";
+      const path = isProduction ? "/ReactJS-Practice-F88/" : "/";
 
       const BackToTop = () => {
         const [isVisible, setIsVisible] = useState(false);
@@ -104,7 +108,7 @@
             <header id="header">
               <div className="header">
                 <h1 className="slogan">Conquer ReactJS with F8 🚀 </h1>
-                <a className="gotoback" href="/ReactJS-Practice-F88/index.html">
+                <a className="gotoback" href={path}>
                   Home
                 </a>
                 <ToggleTheme />
