--- a/public/exercises/exercises_1/weather.html
+++ b/public/exercises/exercises_1/weather.html
@@ -188,7 +188,7 @@
 
         const handleInputChange = (e) => {
           const value = e.target.value;
-          setNewCity(value.trim());
+          setNewCity(value);
         };
 
         const handleInputFocus = () => {
