--- a/exercises/exercises_1/todo.html
+++ b/exercises/exercises_1/todo.html
@@ -70,7 +70,10 @@
 
             <p className="desc">
               Dấu ấn khám phá và thực hành ReactJS cùng F8
-              <a href="https://fullstack.edu.vn/">{` - fullstack.edu.vn - `}</a>
+              <a
+                href="https://fullstack.edu.vn/"
+                target="_blank"
+                rel="noopener noreferrer">{` - fullstack.edu.vn - `}</a>
               Học lập trình để đi làm!
             </p>
           </header>
@@ -149,7 +152,9 @@
               <h2 className="exercise_1">Bài tập 1.2: Todo List App</h2>
               <a
                 href="https://github.com/xuanphao19/ReactJS-Practice-F88/blob/main/public/exercises/exercises_1/todo.html"
-                className="repositories">
+                className="repositories"
+                target="_blank"
+                rel="noopener noreferrer">
                 Repositories GitHub
               </a>
               <div className="wrapper todo-list">
