--- a/exercises/exercises_1/weather.html
+++ b/exercises/exercises_1/weather.html
@@ -78,7 +78,10 @@
 
             <p className="desc">
               Dấu ấn khám phá và thực hành ReactJS cùng F8
-              <a href="https://fullstack.edu.vn/">{` - fullstack.edu.vn - `}</a>
+              <a
+                href="https://fullstack.edu.vn/"
+                target="_blank"
+                rel="noopener noreferrer">{` - fullstack.edu.vn - `}</a>
               Học lập trình để đi làm!
             </p>
           </header>
@@ -320,7 +323,9 @@
 
               <a
                 href="https://github.com/xuanphao19/ReactJS-Practice-F88/blob/main/public/exercises/exercises_1/weather.html"
-                className="repositories">
+                className="repositories"
+                target="_blank"
+                rel="noopener noreferrer">
                 Repositories GitHub
               </a>
 
