--- a/public/exercises/exercises_1/comments.html
+++ b/public/exercises/exercises_1/comments.html
@@ -116,7 +116,10 @@
 
               <p className="desc">
                 Dấu ấn khám phá và thực hành ReactJS cùng F8
-                <a href="https://fullstack.edu.vn/">{` - fullstack.edu.vn - `}</a>
+                <a
+                  href="https://fullstack.edu.vn/"
+                  target="_blank"
+                  rel="noopener noreferrer">{` - fullstack.edu.vn - `}</a>
                 Học lập trình để đi làm!
               </p>
             </header>
@@ -210,7 +213,9 @@
               <h2>Bài tập 1.5: Comment System</h2>
               <a
                 href="https://github.com/xuanphao19/ReactJS-Practice-F88/blob/main/public/exercises/exercises_1/comments.html"
-                className="repositories">
+                className="repositories"
+                target="_blank"
+                rel="noopener noreferrer">
                 Repositories GitHub
               </a>
               <form className="form-data" onSubmit={handleSubmit}>
