--- a/public/exercises/exercises_1/products.html
+++ b/public/exercises/exercises_1/products.html
@@ -71,7 +71,10 @@
 
             <p className="desc">
               Dấu ấn khám phá và thực hành ReactJS cùng F8
-              <a href="https://fullstack.edu.vn/">{` - fullstack.edu.vn - `}</a>
+              <a
+                href="https://fullstack.edu.vn/"
+                target="_blank"
+                rel="noopener noreferrer">{` - fullstack.edu.vn - `}</a>
               Học lập trình để đi làm!
             </p>
           </header>
@@ -253,7 +256,9 @@
               <h2>Bài tập 1.4: Product List</h2>
               <a
                 href="https://github.com/xuanphao19/ReactJS-Practice-F88/blob/main/public/exercises/exercises_1/products.html"
-                className="repositories">
+                className="repositories"
+                target="_blank"
+                rel="noopener noreferrer">
                 Repositories GitHub
               </a>
               <div className="answer-content">
