--- a/public/exercises/exercises_1/comments.html
+++ b/public/exercises/exercises_1/comments.html
@@ -216,7 +216,7 @@
                 className="repositories"
                 target="_blank"
                 rel="noopener noreferrer">
-                Repositories GitHub
+                <span>⭐</span> Repositories GitHub
               </a>
               <form className="form-data" onSubmit={handleSubmit}>
                 <input
