--- a/public/exercises/exercises_1/counter.html
+++ b/public/exercises/exercises_1/counter.html
@@ -106,7 +106,7 @@
                 className="repositories"
                 target="_blank"
                 rel="noopener noreferrer">
-                Repositories GitHub
+                <span>⭐</span> Repositories GitHub
               </a>
               <div className="calculator">
                 <p
