--- a/public/exercises/exercises_1/products.html
+++ b/public/exercises/exercises_1/products.html
@@ -259,7 +259,7 @@
                 className="repositories"
                 target="_blank"
                 rel="noopener noreferrer">
-                Repositories GitHub
+                <span>⭐</span> Repositories GitHub
               </a>
               <div className="answer-content">
                 <div className="blog-list">
