--- a/public/exercises/exercises_1/profile.html
+++ b/public/exercises/exercises_1/profile.html
@@ -150,7 +150,7 @@
                 className="repositories"
                 target="_blank"
                 rel="noopener noreferrer">
-                Repositories GitHub
+                <span>⭐</span> Repositories GitHub
               </a>
               <div className="answer-content">
                 {!artist.avatar_url ? (
