--- a/public/exercises/exercises_1/todo.html
+++ b/public/exercises/exercises_1/todo.html
@@ -155,7 +155,7 @@
                 className="repositories"
                 target="_blank"
                 rel="noopener noreferrer">
-                Repositories GitHub
+                <span>⭐</span> Repositories GitHub
               </a>
               <div className="wrapper todo-list">
                 <ul className="list-task">
