--- a/public/exercises/exercises_1/weather.html
+++ b/public/exercises/exercises_1/weather.html
@@ -326,7 +326,7 @@
                 className="repositories"
                 target="_blank"
                 rel="noopener noreferrer">
-                Repositories GitHub
+                <span>⭐</span> Repositories GitHub
               </a>
 
               <div className="answer-content weather-city">
